objects/SMAX_PS_WorkOrder_Event__e.object
<CustomObject>
    <description>A Platform Event indicating that an Work Order Integration Event has occurred.</description>
    <label>Work Order Event</label>
    <pluralLabel>Work Order Events</pluralLabel>
    <fields>
        <fullName>SMAX_PS_Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InvoiceId__c</fullName>
        <label>Invoice Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SubmitTxnId__c</fullName>
        <label>Submit Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkOrderId__c</fullName>
        <label>Work Order Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_AttachmentId__c</fullName>
        <label>Attachment Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_DMR_Number__c</fullName>
        <label>DMR Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>